<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        tools:context=".ConvertIngredients">


        <TextView
            android:id="@+id/convertedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:visibility="invisible"
            android:text="@string/converted_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amountInputLayout" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ingredientTypeInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="88dp"
            app:boxBackgroundColor="@color/white"
            android:textAlignment="center"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <AutoCompleteTextView
                android:id="@+id/dropdown_menu_ingredient_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/ingredient_type"
                android:imeOptions="actionDone"
                android:inputType="none"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            app:boxBackgroundColor="@color/white"
            android:textAlignment="center"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/black"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredientTypeInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:imeOptions="actionDone"
                android:hint="@string/amount" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fromInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            app:boxBackgroundColor="@color/white"
            android:textAlignment="center"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toEndOf="@id/amountInputLayout"
            app:layout_constraintTop_toBottomOf="@id/ingredientTypeInputLayout">

            <AutoCompleteTextView
                android:id="@+id/dropdown_menu_from"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="13sp"
                android:hint="@string/from"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:imeOptions="actionDone"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/toInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:boxBackgroundColor="@color/white"
            android:textAlignment="center"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/fromInputLayout"
            app:layout_constraintTop_toBottomOf="@id/ingredientTypeInputLayout">

            <AutoCompleteTextView
                android:id="@+id/dropdown_menu_to"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:hint="@string/to"
                android:imeOptions="actionDone"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnConvert"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:text="@string/convert"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toInputLayout" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>